# twitch_api

./: .gitignore  CHANGELOG.md  COPYING  Cargo.toml  README  README.md  bors.toml  copying.md  credentials.rs  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: channel_feed.rs  channels.rs  chat.rs  communities.rs  games.rs  ingests.rs  lib.rs  response.rs  search.rs  streams.rs  teams.rs  users.rs  videos.rs
src/kraken/: channel_feed.rs  channels.rs  chat.rs  communities.rs  games.rs  ingests.rs  mod.rs  search.rs  streams.rs  teams.rs  users.rs  videos.rs
tests/: credentials.rs  example_credentials.toml
