[package]
name = "libtwitch-rs"
version = "0.1.2"
edition = "2018"
authors = ["the libtwitch-rs authors"]
description = "Rust library for the Twitch API"
repository = "https://github.com/simonsan/libtwitch-rs"
documentation = "https://docs.rs/libtwitch-rs/"
readme = "README.md"
keywords = ["twitch", "api"]
categories = ["api-bindings"]
license = "AGPL-3.0-or-later"
maintenance = { status = "actively-developed" }

include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "tests/example_credentials.toml",
    "License",
    "legal/*",
    "copying.md",
    "Readme.md",
]
exclude = [
    "credentials.toml",
]

[lib]
name = "libtwitch_rs"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
chrono = { version = "~0.3", features = ["serde", "rustc-serialize"] }
hyper = "~0.10"
hyper-rustls = "~0.6"
serde = "~0.9"
serde_json = "~0.9"
serde_derive = "~0.9"
toml = "~0.3"
urlparse = "~0.7"

[dev-dependencies]
anyhow = "~1.0"
lazy_static = "~1.4"
pretty_assertions = "~0.6"

[package.metadata.release]
upload-doc = true
no-dev-version = true
pre-release-commit-message = "Release {{crate_name}} {{version}} / {{date}}"