[package]
name = "libtwitch-rs"
version = "0.1.2"
edition = "2018"
authors = ["the libtwitch-rs authors"]
description = "Rust library for the Twitch APIv5 (Kraken)"
repository = "https://github.com/simonsan/libtwitch-rs"
documentation = "https://docs.rs/libtwitch-rs/"
readme = "README.md"
keywords = ["twitch", "api"]
categories = ["api-bindings"]
license = "AGPL-3.0-or-later"


include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "tests/example_credentials.toml",
    "License",
    "legal/*",
    "copying.md",
    "Readme.md",
]
exclude = [
    "credentials.toml",
]

[lib]
name = "libtwitch_rs"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
urlparse = "0.7"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4"
pretty_assertions = "0.6"

[package.metadata.release]
upload-doc = true
no-dev-version = true
pre-release-commit-message = "Release {{crate_name}} {{version}} / {{date}}"

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
